docs(root): updating accessibility statement guidance
Updating guidance for accessibility statements to include more specific guidance for examples, also
updating the html and document versions for references to wcag 2.1

--- a/static/accessibility-statement-html-blank.html
+++ b/static/accessibility-statement-html-blank.html
@@ -43,7 +43,7 @@
             <span>[app name] </span>Accessibility statement (with fictional
             examples)
           </h1>
-          <p>Updated 12 October 2022</p>
+          <p>Updated 29 January 2025</p>
         </div>
       </div>
 
@@ -130,7 +130,7 @@
             We want as many people as possible to be able to use this app. That
             means we’ve built the app so that you can:
           </p>
-
+          <!--Please update the example bullet points to match your app. If you leave the current examples, the information might be incorrect-->
           <ul>
             <li>zoom in up to 300% without the text spilling off the screen</li>
             <li>
@@ -362,7 +362,7 @@
               rel="external"
               href="https://www.w3.org/TR/WCAG22/"
               class="govuk-link"
-              >Web Content Accessibility Guidelines version 2.1</a
+              >Web Content Accessibility Guidelines version 2.2</a
             >
             AA standard.
           </p>
@@ -372,7 +372,7 @@
               rel="external"
               href="https://www.w3.org/TR/WCAG22/"
               class="govuk-link"
-              >Web Content Accessibility Guidelines version 2.1</a
+              >Web Content Accessibility Guidelines version 2.2</a
             >
             AA standard, due to [insert one of the following: ‘the
             non-compliances’, ‘the exemptions’ or ‘the non-compliances and
@@ -384,7 +384,7 @@
               rel="external"
               href="https://www.w3.org/TR/WCAG22/"
               class="govuk-link"
-              >Web Content Accessibility Guidelines version 2.1</a
+              >Web Content Accessibility Guidelines version 2.2</a
             >
             AA standard. The [insert one of the following: ‘non-compliances’,
             ‘exemptions’ or ‘non-compliances and exemptions’] are listed below.
